fixed some merge problems

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,9 @@
 @import 'variables';
 @import 'config';
 @import 'menu';
-@import 'responsive';
 @import 'hero';
+@import 'menucards';
+@import 'responsive';
 
 *
 {
