--- a/styles/main.css
+++ b/styles/main.css
@@ -1,305 +1,3 @@
-.menu-btn {
-  position: fixed;
-  top: 1rem;
-  right: 1rem;
-  width: 50px;
-  height: 50px;
-  cursor: pointer;
-}
-.menu-btn__burger {
-  position: fixed;
-  top: calc(1rem + 25px - 4px);
-  background: #BE805C;
-  width: 50px;
-  height: 8px;
-  transition: all 1s ease-in-out;
-}
-.menu-btn__burger::before {
-  position: fixed;
-  transform: translateY(-15px);
-  content: "";
-  width: 30px;
-  height: 8px;
-  background: #BE805C;
-  transition: all 1s ease-in-out;
-}
-.menu-btn__burger::after {
-  position: fixed;
-  transform: translateY(15px);
-  content: "";
-  width: 50px;
-  height: 8px;
-  background: #BE805C;
-  transition: all 1s ease-in-out;
-}
-.menu-btn__burger.open {
-  transform: rotate(360deg);
-}
-.menu-btn__burger.open::before {
-  width: 50px;
-  height: 8px;
-  transform: rotate(45deg);
-}
-.menu-btn__burger.open::after {
-  transform: rotate(-45deg);
-}
-
-.nav {
-  display: flex;
-  width: 100vw;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 1rem;
-}
-.nav__logo {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 1rem;
-  transition: transform 1s ease-in-out;
-  transform: translateY(-100px);
-}
-.nav__logo.open {
-  transform: translateY(0);
-}
-.nav .menu-nav {
-  list-style-type: none;
-}
-.nav .menu-nav__item {
-  margin: 0.75rem;
-  text-transform: uppercase;
-  transform: translateX(1000px);
-  transition: all 1s ease-in-out;
-}
-.nav .menu-nav__item.open {
-  transform: translateX(0);
-}
-.nav .menu-nav__link {
-  text-decoration: none;
-}
-
-.menu-nav__item:nth-child(1) {
-  transition-delay: 0s;
-}
-
-.menu-nav__item:nth-child(2) {
-  transition-delay: 0.1s;
-}
-
-.menu-nav__item:nth-child(3) {
-  transition-delay: 0.2s;
-}
-
-.menu-nav__item:nth-child(4) {
-  transition-delay: 0.3s;
-}
-
-.menu-nav__item:nth-child(5) {
-  transition-delay: 0.4s;
-}
-
-.hero {
-  border: red 1px solid;
-}
-.hero__img {
-  width: 100vw;
-  object-fit: cover;
-}
-
-.row_boxes {
-  width: 100%;
-  background-image: url("../images/elegant-old-paper-background-texture-12898151.jpg");
-  background-repeat: repeat;
-  display: flex;
-  justify-content: center;
-}
-.row_boxes .max_box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1028px;
-}
-
-/* Columns */
-.col_table {
-  width: 280px;
-  padding: 10px;
-  height: auto;
-  margin: 10px;
-  background-size: cover;
-  color: black;
-  position: relative;
-  margin-bottom: 40px;
-}
-
-.old_text_h {
-  padding: 10px;
-  margin: 10px;
-  font-family: "Indie Flower", cursive;
-  font-size: 2rem;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.one .text h3 {
-  font-family: "Amatic SC", cursive;
-  font-family: "Indie Flower", cursive;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.one .text p {
-  line-height: calc(1rem + 1px);
-  font-family: "Indie Flower", cursive;
-  font-size: 1rem;
-}
-
-/* Small Device */
-@media (min-width: 576px) {
-  .sm-1 {
-    width: 10%;
-  }
-
-  .sm-2 {
-    width: 20%;
-  }
-
-  .sm-3 {
-    width: 30%;
-  }
-
-  .sm-4 {
-    width: 40%;
-  }
-
-  .sm-5 {
-    width: 50%;
-  }
-
-  .sm-6 {
-    width: 60%;
-  }
-
-  .sm-7 {
-    width: 70%;
-  }
-
-  .sm-8 {
-    width: 80%;
-  }
-
-  .sm-9 {
-    width: 90%;
-  }
-
-  .sm-10 {
-    width: 100%;
-  }
-}
-/* Medium Devices */
-@media (min-width: 768px) {
-  .md-1 {
-    width: 10%;
-  }
-
-  .md-2 {
-    width: 20%;
-  }
-
-  .md-3 {
-    width: 33%;
-  }
-
-  .md-4 {
-    width: 40%;
-  }
-
-  .md-5 {
-    width: 50%;
-  }
-
-  .md-6 {
-    width: 60%;
-  }
-
-  .md-7 {
-    width: 70%;
-  }
-
-  .md-8 {
-    width: 80%;
-  }
-
-  .md-9 {
-    width: 90%;
-  }
-
-  .md-10 {
-    width: 100%;
-  }
-}
-/* Large Devices */
-/* @media (min-width: 992px) {
-  .lg-1 { width: 10%; }
-  .lg-2 { width: 20%; }
-  .lg-3 { width: 30%; }
-  .lg-4 { width: 40%; }
-  .lg-5 { width: 50%; }
-  .lg-6 { width: 60%; }
-  .lg-7 { width: 70%; }
-  .lg-8 { width: 80%; }
-  .lg-9 { width: 90%; }
-  .lg-10 { width: 100%; }
-} */
-/*   
-.one img
-{
-  opacity: 40%;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  /* background-image: url("../images/breakfast2.jpg" ); 
-} */
-.dessert {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: row;
-}
-
-@media screen and (min-width: 700px) {
-  .menu-btn__burger {
-    visibility: hidden;
-    transition: all 0s ease-in-out;
-  }
-  .menu-btn__burger::after {
-    transition: all 0s ease-in-out;
-  }
-  .menu-btn__burger::before {
-    transition: all 0s ease-in-out;
-  }
-
-  .nav {
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0;
-    transition: all 0s ease-in-out;
-  }
-  .nav__logo {
-    transition: all 0s ease-in-out;
-    transform: translateY(0);
-  }
-  .nav .menu-nav {
-    display: flex;
-    flex-direction: row;
-    margin-right: 5rem;
-    transform: translateX(0);
-  }
-  .nav .menu-nav__item {
-    transform: translateX(0);
-    transition: all 0s ease-in-out;
-  }
-}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -310,10 +8,203 @@ body {
   background: #CCDBEE;
 }
 
-header {
+.carousel-item {
+  height: 850px;
+}
+
+.sideTitle {
+  font-family: "Yuji Boku", serif;
+  font-family: "Amatic SC", cursive;
+  font-family: "Indie Flower", cursive;
+  transform: rotate(90deg);
+  white-space: nowrap;
+  font-size: 7rem;
+}
+
+.chef {
   position: fixed;
+  top: 50px;
+  left: 0;
+  transform: translateX(-600px);
+  transition: all 2s;
+  background-image: url("../images/minion1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 200px;
+  height: 300px;
+  z-index: 999;
+}
+.chef span {
+  position: absolute;
+  transform: translateX("200px");
+  border: red solid 1px;
+  color: white;
+  background-color: black;
+  width: 400px;
+  border-radius: 30%;
+}
+
+main {
+  width: 100%;
+  height: 840px;
+  /*background: red;*/
+  margin: 10px auto;
+  position: relative;
+  padding: 5px 0;
+}
+
+main .text {
+  padding: 10px;
+  text-align: center;
+  /*font-size: 30px;*/
+  color: #554;
+}
+
+.text h1 {
+  font-size: 50px;
+}
+
+.text p {
+  width: 60%;
+  padding: 5px;
+  margin: auto;
+  line-height: 30px;
+}
+
+main header {
+  width: 98%;
+  height: 60px;
+  margin: 0 auto;
+  /*background: gray;*/
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+  justify-content: space-between;
+  border-bottom: 2px solid #ddd;
+}
+
+header p span {
+  font-size: 40px;
+  margin: 0 5px;
+  cursor: pointer;
+  color: #555;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  line-height: 19px;
+  text-align: center;
+  border-radius: 3px;
+}
+
+header p span:hover {
+  background: #222;
+  color: white;
+}
+
+section {
+  width: 98%;
+  height: 600px;
+  /*background: red;*/
+  margin: auto;
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+}
+
+section::-webkit-scrollbar {
+  display: none;
+}
+
+section .product {
+  min-width: 24%;
+  height: 90%;
+  background: whitesmoke;
+  margin: 0 20px 0 0;
+  border-radius: 20px;
+  position: relative;
+  left: 0;
+  transition: 0.5s;
+}
+
+picture {
+  width: 100%;
+  height: 70%;
+  padding: 20px;
+  /*background: green;*/
+  display: flex;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+picture img {
+  width: 100%;
+}
+
+.detail,
+.button {
+  width: 90%;
+  /*background: red;*/
+  margin: auto;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  font-size: 20px;
+  color: #444;
+}
+
+small {
+  color: #555;
+}
+
+.owl__link {
+  text-decoration: none;
+  padding: 6px 14px;
+  font-size: 15px;
+  margin: 5px 0 0 20px;
+  display: inline-block;
+  background: #6773ff;
+  color: white;
+}
+
+p.star {
+  margin: 5px auto;
+  width: 65%;
+  font-size: 25px;
+  color: #808080;
+}
+
+@media (max-width: 768px) {
+  .text h1 {
+    font-size: 35px;
+  }
+
+  .text p {
+    width: 90%;
+  }
+
+  header h1 {
+    font-size: 25px;
+  }
+
+  header p span {
+    font-size: 30px;
+  }
+
+  section .product {
+    min-width: 49%;
+    margin: 0 10px 0 0;
+  }
+
+  .detail,
+.button {
+    font-size: 16px;
+  }
+
+  a {
+    padding: 6px 10px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
