--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
 
 body {
   background: #CCDBEE;
+  overflow-x: hidden;
 }
 
 .carousel-item {
@@ -21,12 +22,11 @@ body {
   font-size: 7rem;
 }
 
-.chef {
+.chef1 {
   position: fixed;
-  top: 50px;
   left: 0;
   transform: translateX(-600px);
-  transition: all 2s;
+  transition: transform 2s;
   background-image: url("../images/minion1.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,14 +34,54 @@ body {
   height: 300px;
   z-index: 999;
 }
-.chef span {
+.chef2 {
+  position: fixed;
+  left: 0;
+  transform: translateX(100vw);
+  transition: transform 2s;
+  background-image: url("../images/minion1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 200px;
+  height: 300px;
+  z-index: 999;
+}
+.chef3 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateY(-300px);
+  transition: transform 2s;
+  background-image: url("../images/minion1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 200px;
+  height: 300px;
+  z-index: 999;
+}
+.chef4 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateY(100vh);
+  transition: transform 2s;
+  background-image: url("../images/minion1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 200px;
+  height: 300px;
+  z-index: 999;
+}
+.chef1 span, .chef2 span , .chef3 span , .chef4 span  {
   position: absolute;
-  transform: translateX("200px");
+  transform: translateX(200px);
   border: red solid 1px;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
   width: 400px;
+  height: 200px;
   border-radius: 30%;
+  padding: 50px;
 }
 
 main {
