--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import "config";
 // @import "menu";
 // @import "hero";
-// @import "menucards";
+@import "menucards";
 // @import "responsive";
 
 * {
