--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 .delivery_main {
+  background-color: #232528;
+  background-image: url("../src/images/deliverys/about.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Indie Flower', cursive;
   font-size: 2rem;
   text-transform: uppercase;
@@ -31,7 +35,7 @@
 .delivery_box {
   width: 500px;
   height: auto;
-  position: relative;
+  position: absolute;
   -webkit-animation: mymove 8s 3;
           animation: mymove 8s 3;
   background-size: cover;
@@ -39,110 +43,280 @@
 
 @-webkit-keyframes mymove {
   0% {
-    top: -100px;
-    left: 400px;
+    top: 200px;
+    left: 330px;
     background-image: url("/src/images/deliverys/qrcoins.png");
-    width: 200px;
+    width: 20px;
     height: 200px;
-  }
-  22% {
-    top: 0px;
-    left: 0;
-    background-image: url("/src/images/deliverys/qrcoins.png");
+    border-radius: 50%;
+    -webkit-box-shadow: 3px 0 2px 3px #f9f4f3;
+            box-shadow: 3px 0 2px 3px #f9f4f3;
   }
   33% {
-    top: 0;
-    left: 0px;
+    top: 400px;
+    left: 490px;
     background-image: url("/src/images/deliverys/qrcoins.png");
     width: 200px;
     height: 200px;
   }
   50% {
-    top: -100;
-    left: 0px;
+    top: 500px;
+    left: 530px;
     background-image: url("/src/images/deliverys/qrcoins.png");
-    width: 10px;
-    height: 10px;
+    width: 5px;
+    height: 5px;
   }
   61% {
-    left: 0px;
-    top: -200px;
+    top: 500px;
+    left: 530px;
     background-image: url("/src/images/deliverys/ourDelivery.jpg");
     width: 10px;
     height: 10px;
   }
-  69% {
-    left: 0px;
-    top: 0px;
-    background-image: url("/src/images/deliverys/ourDelivery.jpg");
-  }
-  74% {
-    left: 0px;
-    top: -50px;
-    background-image: url("/src/images/deliverys/ourDelivery.jpg");
-  }
   100% {
-    left: 0px;
-    top: -50px;
+    top: 200px;
+    left: 330px;
     background-image: url("/src/images/deliverys/ourDelivery.jpg");
     width: 350px;
     height: 350px;
     border-radius: 50%;
+    -webkit-box-shadow: 3px 0 2px 3px #f9f4f3;
+            box-shadow: 3px 0 2px 3px #f9f4f3;
   }
 }
 
 @keyframes mymove {
   0% {
-    top: -100px;
-    left: 400px;
+    top: 200px;
+    left: 330px;
     background-image: url("/src/images/deliverys/qrcoins.png");
-    width: 200px;
+    width: 20px;
     height: 200px;
-  }
-  22% {
-    top: 0px;
-    left: 0;
-    background-image: url("/src/images/deliverys/qrcoins.png");
+    border-radius: 50%;
+    -webkit-box-shadow: 3px 0 2px 3px #f9f4f3;
+            box-shadow: 3px 0 2px 3px #f9f4f3;
   }
   33% {
-    top: 0;
-    left: 0px;
+    top: 400px;
+    left: 490px;
     background-image: url("/src/images/deliverys/qrcoins.png");
     width: 200px;
     height: 200px;
   }
   50% {
-    top: -100;
-    left: 0px;
+    top: 500px;
+    left: 530px;
     background-image: url("/src/images/deliverys/qrcoins.png");
-    width: 10px;
-    height: 10px;
+    width: 5px;
+    height: 5px;
   }
   61% {
-    left: 0px;
-    top: -200px;
+    top: 500px;
+    left: 530px;
     background-image: url("/src/images/deliverys/ourDelivery.jpg");
     width: 10px;
     height: 10px;
   }
-  69% {
-    left: 0px;
-    top: 0px;
-    background-image: url("/src/images/deliverys/ourDelivery.jpg");
-  }
-  74% {
-    left: 0px;
-    top: -50px;
-    background-image: url("/src/images/deliverys/ourDelivery.jpg");
-  }
   100% {
-    left: 0px;
-    top: -50px;
+    top: 200px;
+    left: 330px;
     background-image: url("/src/images/deliverys/ourDelivery.jpg");
     width: 350px;
     height: 350px;
     border-radius: 50%;
+    -webkit-box-shadow: 3px 0 2px 3px #f9f4f3;
+            box-shadow: 3px 0 2px 3px #f9f4f3;
   }
+}
+
+.headermenu {
+  height: auto;
+}
+
+.menu_top_image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.menu_top_image .menu_img_top {
+  position: fixed;
+  left: 30px;
+  width: 200px;
+  height: 200px;
+}
+
+.row_boxes {
+  width: 100%;
+  height: auto;
+  background-image: url("../images/elegant-old-paper-background-texture-12898151.jpg");
+  background-repeat: repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 12 0 12px;
+}
+
+.row_boxes .max_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 1028px;
+}
+
+.dessert {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: row;
+      -ms-flex-pack: row;
+          justify-content: row;
+}
+
+/* Columns */
+.col_table {
+  width: 280px;
+  height: auto;
+  margin: 10px;
+  background-size: cover;
+  color: black;
+  margin-bottom: 50px;
+  position: relative;
+}
+
+.col_table .menu_img {
+  position: absolute;
+  opacity: 30%;
+  width: 250px;
+}
+
+.old_text_h {
+  padding: 10px;
+  margin: 10px;
+  font-family: 'Indie Flower', cursive;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.one .menu_text h3 {
+  font-family: 'Amatic SC', cursive;
+  font-family: 'Indie Flower', cursive;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.one .menu_text p {
+  margin-right: 12px;
+  line-height: calc(1rem + 1px);
+  font-family: 'Indie Flower', cursive;
+  font-size: 1rem;
+}
+
+/* Small Device */
+@media (min-width: 576px) {
+  .sm-1 {
+    width: 10%;
+  }
+  .sm-2 {
+    width: 20%;
+  }
+  .sm-3 {
+    width: 30%;
+  }
+  .sm-4 {
+    width: 40%;
+  }
+  .sm-5 {
+    width: 50%;
+  }
+  .sm-6 {
+    width: 60%;
+  }
+  .sm-7 {
+    width: 70%;
+  }
+  .sm-8 {
+    width: 80%;
+  }
+  .sm-9 {
+    width: 90%;
+  }
+  .sm-10 {
+    width: 100%;
+  }
+}
+
+/* Medium Devices */
+@media (min-width: 768px) {
+  .md-1 {
+    width: 10%;
+  }
+  .md-2 {
+    width: 20%;
+  }
+  .md-3 {
+    width: 33%;
+  }
+  .md-4 {
+    width: 40%;
+  }
+  .md-5 {
+    width: 50%;
+  }
+  .md-6 {
+    width: 60%;
+  }
+  .md-7 {
+    width: 70%;
+  }
+  .md-8 {
+    width: 80%;
+  }
+  .md-9 {
+    width: 90%;
+  }
+  .md-10 {
+    width: 100%;
+  }
+}
+
+/* Large Devices */
+/* @media (min-width: 992px) {
+    .lg-1 { width: 10%; }
+    .lg-2 { width: 20%; }
+    .lg-3 { width: 30%; }
+    .lg-4 { width: 40%; }
+    .lg-5 { width: 50%; }
+    .lg-6 { width: 60%; }
+    .lg-7 { width: 70%; }
+    .lg-8 { width: 80%; }
+    .lg-9 { width: 90%; }
+    .lg-10 { width: 100%; }
+  } */
+/*   
+  .one img
+  {
+    opacity: 40%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    /* background-image: url("../images/breakfast2.jpg" ); 
+  } */
+.headermenu {
+  height: auto;
 }
 
 .menu_top_image {
