--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,212 @@
   }
 }
 
+/* ----------------Bestell Form------------- */
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 16px;
+}
+
+.btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+a {
+  color: #2196F3;
+}
+
+hr {
+  border: 1px solid lightgrey;
+}
+
+.line {
+  width: 33%;
+  border: solid 1px grey;
+}
+
+span.price {
+  color: grey;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
+@media (max-width: 800px) {
+  .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .col-25 {
+    margin-bottom: 20px;
+  }
+}
+
+.row {
+  display: -ms-flexbox;
+  /* IE10 */
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  /* IE10 */
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  -ms-flex: 25%;
+  /* IE10 */
+  -webkit-box-flex: 25%;
+          flex: 25%;
+}
+
+.col-50 {
+  -ms-flex: 50%;
+  /* IE10 */
+  -webkit-box-flex: 50%;
+          flex: 50%;
+}
+
+.col-75 {
+  -ms-flex: 75%;
+  /* IE10 */
+  -webkit-box-flex: 75%;
+          flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.bestell_form {
+  margin-top: 60px;
+}
+
+.bestell_coin_image img {
+  width: 150px;
+  height: auto;
+}
+
+.delivery_main {
+  font-family: 'Indie Flower', cursive;
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.delivery_main .head_text {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.delivery_main .head_text h3 {
+  font-size: 3rem;
+}
+
+.delivery_page {
+  width: 100%;
+  height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: wrap;
+      -ms-flex-pack: wrap;
+          justify-content: wrap;
+}
+
+.delivery_box {
+  width: 500px;
+  height: auto;
+  position: relative;
+  -webkit-animation: mymove 8s 3;
+          animation: mymove 8s 3;
+  background-size: cover;
+}
+
+@keyframes mymove {
+  0% {
+    top: -100px;
+    left: 400px;
+    background-image: url("/src/images/deliverys/qrcoins.png");
+    width: 200px;
+    height: 200px;
+  }
+  22% {
+    top: 0px;
+    left: 0;
+    background-image: url("/src/images/deliverys/qrcoins.png");
+  }
+  33% {
+    top: 0;
+    left: 0px;
+    background-image: url("/src/images/deliverys/qrcoins.png");
+    width: 200px;
+    height: 200px;
+  }
+  50% {
+    top: -100;
+    left: 0px;
+    background-image: url("/src/images/deliverys/qrcoins.png");
+    width: 10px;
+    height: 10px;
+  }
+  61% {
+    left: 0px;
+    top: -200px;
+    background-image: url("/src/images/deliverys/ourDelivery.jpg");
+    width: 10px;
+    height: 10px;
+  }
+  69% {
+    left: 0px;
+    top: 0px;
+    background-image: url("/src/images/deliverys/ourDelivery.jpg");
+  }
+  74% {
+    left: 0px;
+    top: -50px;
+    background-image: url("/src/images/deliverys/ourDelivery.jpg");
+  }
+  100% {
+    left: 0px;
+    top: -50px;
+    background-image: url("/src/images/deliverys/ourDelivery.jpg");
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+  }
+}
+
 .menu_top_image {
   -o-object-fit: cover;
   object-fit: cover;
