fix annoying git

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@ body {
   height: 100vh;
   // display: flex;
   display: none;
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -111,7 +112,6 @@ body {
   position: absolute;
   transform: translateX(200px);
   // border: #F28B31 solid 1px;
-  color: black;
   background-color: white;
   width: content;
   height: content;
