--- a/styles/_animatedcoin.scss
+++ b/styles/_animatedcoin.scss
@@ -33,13 +33,52 @@
   }
 
   @keyframes mymove {
-    0%        {top: -100px; left: 400px; background-image: url("/src/images/deliverys/qrcoins.png");width: 200px;height: 200px;}
-    22%       {top: 0px; left: 0; background-image: url("/src/images/deliverys/qrcoins.png");}
-    33%       {top: 0; left: 0px;background-image: url("/src/images/deliverys/qrcoins.png");width: 200px;height: 200px;} 
-    50%       {top: -100; left: 0px;background-image: url("/src/images/deliverys/qrcoins.png");width: 10px;height: 10px;}
-
-    61%       {left: 0px; top: -200px; background-image: url("/src/images/deliverys/ourDelivery.jpg");width: 10px;height: 10px;}
-    69%       {left: 0px; top: 0px;  background-image: url("/src/images/deliverys/ourDelivery.jpg");}
-    74%       {left: 0px; top: -50px; background-image: url("/src/images/deliverys/ourDelivery.jpg");}
-    100%       {left: 0px; top: -50px; background-image: url("/src/images/deliverys/ourDelivery.jpg");width: 350px;height: 350px; border-radius: 50%;}
+    0%
+    {
+    top: -100px;
+    left: 400px; 
+    background-image: url("/src/images/coin/front.png");
+    width: 200px;height: 200px;
+    border-radius:50%;
+    transform: perspective(1000px) rotateY(0deg);
   }
+    22%       
+    {
+    top: 0px; 
+    left: 0; 
+    background-image: url("/src/images/coin/front.png");
+  }
+    33%       
+    {
+    top: 0; 
+    left: 0px;
+    background-image: url("/src/images/coin/front.png");
+    width: 200px;
+    height: 200px;
+    transform: perspective(1000px) rotateY(360deg);
+  } 
+    50%       
+    {
+    top: -100; 
+    left: 0px;
+    background-image: url("/src/images/coin/front.png");
+    width: 10px;
+    height: 10px;
+    transform: perspective(1000px) rotateY(0deg);
+  }
+
+    61%       
+    {
+    left: 0px; 
+    top: -200px; 
+    background-image: url("/src/images/coin/back.png");
+    width: 10px;
+    height: 10px;
+    transform: perspective(1000px) rotateY(0deg);
+  }
+    69%       
+    {left: 0px; top: 0px;  background-image: url("/src/images/coin/back.png");}
+    74%       {left: 0px; top: -50px; background-image: url("/src/images/coin/back.png");}
+    100%       {left: 0px; top: -50px; background-image: url("/src/images/coin/back.png");width: 350px;height: 350px; border-radius: 50%;transform: perspective(1000px) rotateY(360deg)}
+  }
+
