--- a/styles/main.css
+++ b/styles/main.css
@@ -1,163 +1,3 @@
-.row_boxes {
-  width: 100%;
-  background-image: url("../images/elegant-old-paper-background-texture-12898151.jpg");
-  background-repeat: repeat;
-  display: flex;
-  justify-content: center;
-}
-.row_boxes .max_box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1028px;
-}
-
-/* Columns */
-.col_table {
-  width: 280px;
-  padding: 10px;
-  height: auto;
-  margin: 10px;
-  background-size: cover;
-  color: black;
-  position: relative;
-  margin-bottom: 40px;
-}
-
-.old_text_h {
-  padding: 10px;
-  margin: 10px;
-  font-family: "Indie Flower", cursive;
-  font-size: 2rem;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.one .text h3 {
-  font-family: "Amatic SC", cursive;
-  font-family: "Indie Flower", cursive;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.one .text p {
-  line-height: calc(1rem + 1px);
-  font-family: "Indie Flower", cursive;
-  font-size: 1rem;
-}
-
-/* Small Device */
-@media (min-width: 576px) {
-  .sm-1 {
-    width: 10%;
-  }
-
-  .sm-2 {
-    width: 20%;
-  }
-
-  .sm-3 {
-    width: 30%;
-  }
-
-  .sm-4 {
-    width: 40%;
-  }
-
-  .sm-5 {
-    width: 50%;
-  }
-
-  .sm-6 {
-    width: 60%;
-  }
-
-  .sm-7 {
-    width: 70%;
-  }
-
-  .sm-8 {
-    width: 80%;
-  }
-
-  .sm-9 {
-    width: 90%;
-  }
-
-  .sm-10 {
-    width: 100%;
-  }
-}
-/* Medium Devices */
-@media (min-width: 768px) {
-  .md-1 {
-    width: 10%;
-  }
-
-  .md-2 {
-    width: 20%;
-  }
-
-  .md-3 {
-    width: 33%;
-  }
-
-  .md-4 {
-    width: 40%;
-  }
-
-  .md-5 {
-    width: 50%;
-  }
-
-  .md-6 {
-    width: 60%;
-  }
-
-  .md-7 {
-    width: 70%;
-  }
-
-  .md-8 {
-    width: 80%;
-  }
-
-  .md-9 {
-    width: 90%;
-  }
-
-  .md-10 {
-    width: 100%;
-  }
-}
-/* Large Devices */
-/* @media (min-width: 992px) {
-  .lg-1 { width: 10%; }
-  .lg-2 { width: 20%; }
-  .lg-3 { width: 30%; }
-  .lg-4 { width: 40%; }
-  .lg-5 { width: 50%; }
-  .lg-6 { width: 60%; }
-  .lg-7 { width: 70%; }
-  .lg-8 { width: 80%; }
-  .lg-9 { width: 90%; }
-  .lg-10 { width: 100%; }
-} */
-/*   
-.one img
-{
-  opacity: 40%;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  /* background-image: url("../images/breakfast2.jpg" ); 
-} */
-.dessert {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: row;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -174,6 +14,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
+  display: none;
   display: none;
   justify-content: center;
   align-items: center;
@@ -256,7 +97,6 @@ body {
 .chef4 span {
   position: absolute;
   transform: translateX(200px);
-  color: black;
   background-color: white;
   width: content;
   height: content;
