--- a/styles/main.css
+++ b/styles/main.css
@@ -280,6 +280,7 @@ p.star {
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 70px;
+  margin-top: 100px;
 }
 
 .footer-copyright {
@@ -480,6 +481,17 @@ ul.social-footer2 li a {
   -ms-transition: all 250ms ease-in-out 0s;
   -o-transition: all 250ms ease-in-out 0s;
   transition: all 250ms ease-in-out 0s;
+}
+
+.parent {
+  position: relative;
+}
+.parent .title__cafe {
+  position: absolute;
+}
+
+.title__trans {
+  transform: translateY(-650px) rotate(90deg);
 }
 
 /*# sourceMappingURL=main.css.map */
